--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
 
   <main id="etusivu" class="container">
     <section class="hero">
-      <figure class="slide active"><img src="images/IMG_1494.jpeg" alt="Mekko" loading="lazy" /></figure>
-      <figure class="slide"><img src="images/IMG_1495.jpeg" alt="Pusero" loading="lazy" /></figure>
-      <figure class="slide"><img src="images/IMG_1499.jpeg" alt="Hame" loading="lazy" /></figure>
-	<figure class="slide"><img src="images/IMG_1504.jpeg" alt="Hame" loading="lazy" /></figure>
-	<figure class="slide"><img src="images/IMG_1505.jpeg" alt="Hame" loading="lazy" /></figure>
+      <figure class="slide active"><img src="images/img_1494.jpeg" alt="Mekko" loading="lazy" /></figure>
+      <figure class="slide"><img src="images/img_1495.jpeg" alt="Pusero" loading="lazy" /></figure>
+      <figure class="slide"><img src="images/img_1499.jpeg" alt="Hame" loading="lazy" /></figure>
+	<figure class="slide"><img src="images/img_1504.jpeg" alt="Hame" loading="lazy" /></figure>
+	<figure class="slide"><img src="images/img_1505.jpeg" alt="Hame" loading="lazy" /></figure>
       <div class="dots"></div>
     </section>
 
@@ -109,7 +109,7 @@
     <p lang="fa" dir="rtl">🇦🇫 من اصالتاً از افغانستان هستم و لباس‌های دست‌دوز با کیفیت و منحصر به فرد می‌دوزم که به سفارش شما ساخته می‌شوند.</p>
   </div>
   <div class="about-photo">
-    <img src="images/Esittely.jpeg" alt="Esittelykuva" loading="lazy" />
+    <img src="images/esittely.jpeg" alt="Esittelykuva" loading="lazy" />
   </div>
 </section>
 
@@ -118,7 +118,7 @@
       <h2>Tuotteet / Products / محصولات</h2>
       <div class="grid">
         <article class="card">
-          <img src="images/IMG_1495.jpeg" alt="Mekko" loading="lazy" />
+          <img src="images/img_1495.jpeg" alt="Mekko" loading="lazy" />
           <div class="content">e
             <div class="badge">Uutuus / New / جدید</div>
             <h3>Mekko "Aava"</h3>
@@ -127,7 +127,7 @@
           </div>
         </article>
         <article class="card">
-          <img src="images/IMG_1499.jpeg" alt="Pusero" loading="lazy" />
+          <img src="images/img_1499.jpeg" alt="Pusero" loading="lazy" />
           <div class="content">
             <div class="badge">Klassikko / Classic / کلاسیک</div>
             <h3>Pusero "Säde"</h3>
@@ -136,7 +136,7 @@
           </div>
         </article>
         <article class="card">
-          <img src="images/IMG_1494.jpeg" alt="Hame" loading="lazy" />
+          <img src="images/img_1494.jpeg" alt="Hame" loading="lazy" />
           <div class="content">
             <div class="badge">Rajoitettu / Limited / محدود</div>
             <h3>Hame "Kielo"</h3>
