--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <nav>
 	<!-- Kun saat firman logon, vaihda se tähän -->
 	<div class="brand">
-	  <img src="images/logo.JPG" alt="Nadiya Boutique" style="height:50px;">
+	  <img src="images/logo.jpg" alt="Nadiya Boutique" style="height:70px;">
 	</div>
         <div class="nav-links">
           <a href="#etusivu">Etusivu / Home / خانه</a>
@@ -169,7 +169,7 @@
     <div class="container">  
 	<small>
 	  © <span id="year"></span> 
- 	 <img src="images/logo.JPG" alt="Nadiya Boutique" style="height:30px; vertical-align:middle;">
+ 	 <img src="images/logo.jpg" alt="Nadiya Boutique" style="height:40px; vertical-align:middle;">
 	  · Handmade with love · با عشق ساخته شده.
 	</small>
     </div>
