--- a/index.html
+++ b/index.html
@@ -188,6 +188,26 @@ box-shadow: 0 2px 6px rgba(0,0,0,0.05);
 
     <section id="yhteys" class="section">
       <h2>Yhteys / Contact / تماس</h2>
+	<p>
+	  <a href="https://www.instagram.com/p/DNnEimDMWHP/?igsh=MWQzZnl0MHBrYmJ4Yg==" target="_blank">
+	    📷 Instagram
+	  </a>
+	</p>
+
+	
+
+
+
+	<!-- Instagram post embed 
+		<blockquote class="instagram-media" 
+ 		 data-instgrm-permalink="https://www.instagram.com/p/DNnEimDMWHP/" 
+		  data-instgrm-version="14"
+		  style="background:#FFF; border:0; margin: 20px auto; max-width:540px; min-width:326px; padding:0; width:100%;">
+		</blockquote>
+	<script async src="//www.instagram.com/embed.js"></script>-->
+
+
+
       <p>🇫🇮 Tilaukset ja kysymykset: <a href="mailto:esimerkki@posti.fi">esimerkki@posti.fi</a></p> <!-- e-mail kuvana -->
       <p>🇬🇧 Orders and inquiries: <a href="mailto:esimerkki@posti.fi">esimerkki@posti.fi</a></p>
       <p lang="fa" dir="rtl">🇦🇫 برای سفارش و پرسش‌ها: <a href="mailto:esimerkki@posti.fi">esimerkki@posti.fi</a></p>
