--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@ box-shadow: 0 2px 6px rgba(0,0,0,0.05);
       <h2>Yhteys / Contact / تماس</h2>
 	<p>
 	  <a href="https://www.instagram.com/p/DNnEimDMWHP/?igsh=MWQzZnl0MHBrYmJ4Yg==" target="_blank">
-	    📷 Instagram
-	  </a>
+	    Katso Instagramissa
+ 	 </a>
 	</p>
 
 	
