--- a/index.html
+++ b/index.html
@@ -136,7 +136,15 @@ box-shadow: 0 2px 6px rgba(0,0,0,0.05);
 
 
   </style>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YNTP84H1P4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-YNTP84H1P4');
+</script>
 </head>
 
 
