--- a/index.html
+++ b/index.html
@@ -135,6 +135,29 @@ box-shadow: 0 2px 6px rgba(0,0,0,0.05);
 }
 
 
+.instagram-box, .contact-box {
+  max-width: 300px;
+  margin: 20px auto;
+  padding: 1rem;
+  text-align: center;
+  background: #fff;
+  border: 2px solid #e5e5e5;
+  border-radius: 12px;
+  transition: transform .2s, border-color .2s;
+}
+
+.instagram-box:hover, .contact-box:hover {
+  border-color: #d1d1d1;
+  transform: translateY(-3px);
+}
+
+.instagram-box svg {
+  margin-bottom: 0.8rem;
+  color: #E1306C; /* Instagram pinkki */
+}
+
+
+
   </style>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-YNTP84H1P4"></script>
@@ -246,29 +269,43 @@ box-shadow: 0 2px 6px rgba(0,0,0,0.05);
 
     <section id="yhteys" class="section">
       <h2>Yhteys / Contact / تماس</h2>
-	<p>
-	  <a href="https://www.instagram.com/p/DNnEimDMWHP/?igsh=MWQzZnl0MHBrYmJ4Yg==" target="_blank">
-	    Katso Instagramissa
- 	 </a>
-	</p>
-
-	
-
-
-
-	<!-- Instagram post embed 
-		<blockquote class="instagram-media" 
- 		 data-instgrm-permalink="https://www.instagram.com/p/DNnEimDMWHP/" 
-		  data-instgrm-version="14"
-		  style="background:#FFF; border:0; margin: 20px auto; max-width:540px; min-width:326px; padding:0; width:100%;">
-		</blockquote>
-	<script async src="//www.instagram.com/embed.js"></script>-->
+	<!-- Instagram-linkki laatikkona -->
+<div class="instagram-box">
+  <a href="https://www.instagram.com/nadiya_boutique/"
+     target="_blank" rel="noopener">
+     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+       <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+       <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+       <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
+     </svg>
+     <p><strong>Katso uusin päivitys Instagramissa</strong></p>
+     <p><strong>See the latest update on Instagram</strong></p>
+     <p dir="rtl"><strong>آخرین به‌روزرسانی را در اینستاگرام ببینید</strong></p>
+  </a>
+</div>
 
 
+<!-- Tilaukset ja kysymykset laatikko -->
+<div class="contact-box">
+  <p>🇫🇮 <strong>Tilaukset ja kysymykset:</strong></p>
+  <p>nahidneimati017 
+     <img src="c03a87de-0cc2-4261-8c6a-a894a1ebcb41.png" alt="@" style="height:14px; vertical-align:middle;">
+     gmail.com
+  </p>
+  
+  <p>🇬🇧 <strong>Orders and inquiries:</strong></p>
+  <p>nahidneimati017 
+     <img src="c03a87de-0cc2-4261-8c6a-a894a1ebcb41.png" alt="@" style="height:14px; vertical-align:middle;">
+     gmail.com
+  </p>
+  
+  <p lang="fa" dir="rtl">🇦🇫 <strong>برای سفارش و پرسش‌ها:</strong></p>
+  <p lang="fa" dir="rtl">nahidneimati017 
+     <img src="c03a87de-0cc2-4261-8c6a-a894a1ebcb41.png" alt="@" style="height:14px; vertical-align:middle;">
+     gmail.com
+  </p>
+</div>
 
-      <p>🇫🇮 Tilaukset ja kysymykset: <a href="mailto:esimerkki@posti.fi">esimerkki@posti.fi</a></p> <!-- e-mail kuvana -->
-      <p>🇬🇧 Orders and inquiries: <a href="mailto:esimerkki@posti.fi">esimerkki@posti.fi</a></p>
-      <p lang="fa" dir="rtl">🇦🇫 برای سفارش و پرسش‌ها: <a href="mailto:esimerkki@posti.fi">esimerkki@posti.fi</a></p>
     </section>
   </main>
 	<!-- tähän logo -->
