--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@ box-shadow: 0 2px 6px rgba(0,0,0,0.05);
 
   <!-- Yksi sähköpostiosoite kaikille -->
   <p>
-    <a href="mailto:nahidneimati017<at>gmail.com" class="email-link">
-      nahidneimati017
+    <a href="mailto:nadiyaboutigue<at>gmail.com" class="email-link">
+      nadiyaboutigue
       <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" 
            viewBox="0 0 24 24" fill="currentColor" style="vertical-align:middle; margin: 0 2px;">
         <path d="M12 2C6.486 2 2 6.486 2 12s4.486 
