--- a/index.html
+++ b/index.html
@@ -214,9 +214,20 @@ box-shadow: 0 2px 6px rgba(0,0,0,0.05);
     <section id="tietoja" class="section about">
   <div class="about-text">
     <h2>Tietoja minusta / About me / در باره من</h2>
-    <p>🇫🇮 Olen syntyisin Afganistanista ja valmistan yksilöllisiä, laadukkaita vaatteita mittatilauksena.</p>
-    <p>🇬🇧 I am originally from Afghanistan and I create unique, high-quality handmade clothes tailored to order.</p>
-    <p lang="fa" dir="rtl">🇦🇫 من اصالتاً از افغانستان هستم و لباس‌های دست‌دوز با کیفیت و منحصر به فرد می‌دوزم که به سفارش شما ساخته می‌شوند.</p>
+    <p>Minä olen Nadia, afganistanilainen tyttö <img src="https://flagcdn.com/16x12/af.png" alt="AF">. 
+Tuon teille perinteiset ja aidot afganistanilaiset vaatteet – pala kulttuuria ja kauneutta, valittuna rakkaudella.
+Jokainen vaate on pala taidetta, historiaa ja Afganistanin henkeä, valittu teille rakkaudella ja huolella.
+Tavoitteeni on, että ette vain pukeudu, vaan koette myös kulttuurimme, värimme ja kotimaamme aitouden.
+Tulemme yhdessä herättämään Afganistanin kauneuden ja loiston elämäänne arjessa ✨</p>
+    <p>I am Nadia, an Afghan girl <img src="https://flagcdn.com/16x12/af.png" alt="AF">.
+I bring you traditional and authentic Afghan clothes – a piece of culture and beauty, chosen with love.
+Each piece of clothing is a piece of art, history, and the spirit of Afghanistan, chosen for you with love and care.
+My goal is for you to not only dress, but also experience the authenticity of our culture, colors, and homeland.
+Together we will awaken the beauty and splendor of Afghanistan in your everyday life ✨</p>
+    <p lang="fa" dir="rtl">من نادیا دختر افغان زمین اینجا هستم تا جلوه‌های فرهنگ و زیبایی‌های سرزمین عزیزمان، افغانستان <img src="https://flagcdn.com/16x12/af.png" alt="AF">، را در قالب لباس‌های سنتی و اصیل برای شما به نمایش بگذارم.
+هر لباس، تکه‌ای از هنر، تاریخ و روح افغانستان است که با عشق و دقت برای شما انتخاب شده است.
+هدف من این است که شما نه تنها لباس بپوشید، بلکه تجربه‌ای از فرهنگ، رنگ‌ها و اصالت سرزمین ما داشته باشید.
+بیایید با هم، زیبایی و شکوه افغانستان را در زندگی روزمره‌مان زنده کنیم</p>
   </div>
   <div class="about-photo">
     <img src="./images/esittely.JPEG" alt="Esittelykuva" loading="lazy" />
