--- a/index .html
+++ b/index .html
@@ -42,9 +42,9 @@
 	<div class="notice">
 <!-- HUOM    Kun sivu on valmis poista tämä huomautus  HUOM -->
 
-	<p>🇫🇮 Huom! Sivu on kehitysvaiheessa. Toimiva sivu tulee pian.</p>
-	  <p>🇬🇧 Note! This page is under development. The website will be completed soon.</p>
-	  <p lang="fa" dir="rtl">🇦🇫 توجه! این صفحه در حال توسعه است. نسخه کامل به زودی در دسترس خواهد بود.</p>
+	<p>Huom! Sivu on kehitysvaiheessa. Toimiva sivu tulee pian.</p>
+	  <p>Note! This page is under development. The website will be completed soon.</p>
+	  <p lang="fa" dir="rtl">توجه! این صفحه در حال توسعه است. نسخه کامل به زودی در دسترس خواهد بود.</p>
 	</div>
      <section class="hero">
      <figure class="slide active"><img src="./images/a-20250912-0003.jpg" alt="Mekko" loading="lazy" /></figure>
